# voice-to-voice

./: .babelrc  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.electron.js  webpack.web.js
.github/workflows/: build.yml
back/: app.js
cpp/: binding.gyp
cpp/build_nojs/: Makefile  VoiceBackend  VoiceBackend_test  cmake_install.cmake
cpp/src/: #main.cpp#  helloworld.cpp  helloworld.h  js_iface.cpp  main.cpp  sandbox.cpp
cpp/src/audio/: AudioHandler.cpp  WAVHandler.cpp  io.cpp  io.h  main.cpp
cpp/src/data/: BinaryTree.cpp
cpp/src/include/: common.h  main.h
cpp/src/include/audio/: #io.h#  AudioHandler.h  WAVHandler.h  io.h
cpp/src/include/data/: BinaryTree.h  Buffer.h
cpp/src/include/task/: BasicTask.h  FunctionTask.h  Task.h  TaskPool.h
cpp/src/include/test/: AudioHandler.h  BinaryTree.h  Task.h  TaskPool.h  TaskResult.h  WAVHandler.h
cpp/src/processing/: Processing.cpp
cpp/src/task/: Task.cpp  TaskPool.cpp
cpp/src/test/: AudioHandler_test.cpp  BinaryTree_test.cpp  TaskPool_test.cpp  Task_test.cpp  WAVHandler_test.cpp
cpp/test/: Spectrogram_test.cpp  Task_test.cpp  WAVHandler_test.cpp  io_test.cpp
cpp/test/include/test/: BinaryTree.h  Spectrogram.h  Task.h  WAVHandler.h
dev/: Dockerfile
electron_app/: forge.config.js  main.js  package-lock.json  package.json  preload.js  voice_iface.js
front/: App.js  App.test.js  index.js  index_electron.html  package-lock.json  package.json
front/interface/: back.js
misc/: Taskclasses.drawio
misc/Current_Arch/: arch.drawio  build.drawio  components.drawio
misc/Target_Arch/: components.drawio
old/audio/: io.cpp  io.h  main.h
src/: .gitignore  app.js  helloworld.cpp  helloworld.h  package-lock.json  package.json  sandbox.cpp
src/audio/: WAVHandler.cpp
src/back/: app.js  app.js~
src/data/: BinaryTree.cpp
src/electron_app/: main.js  package.json  preload.js
src/electron_app/app/: index.html  renderer.js
src/front/: App.js  index.html  index.js  index.js~  package-lock.json  package.json  webpack.config.js
src/include/: common.h  main.h
src/include/audio/: AudioHandler.h  io.h
src/include/data/: BinaryTree.h  Buffer.h
src/include/processing/: Processing.h  Spectrogram.h
src/include/task/: Task.h
src/old/audio/: main.cpp
src/old/documentation/.planning/: planning.org
src/processing/: Spectrogram.cpp
test/: WAVHandler_test.cpp
